--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Milan Raval</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/originals/eb/a5/10/eba5102bd4ce7e1684adcc2d3551a5b0.png">
+  <link rel="icon" type="image/x-icon" href="https://mybookproject.s3.ap-south-1.amazonaws.com/m_icon.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://getbootstrap.com/docs/4.5/assets/css/docs.min.css">
@@ -22,5 +22,6 @@
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
-
+<script>
+</script>
 </html>
